# pocketOS

./: README.md
cmake/: beam.cmake
core/: .gitignore  CMakeLists.txt  README.md  display.erl  input.erl  keyboard_parser.ex  main.ex  mix.exs  scene.erl
core/config/: config.exs
core/icons/: CMakeLists.txt  Makefile  rgba_to_erl.py  write_module.sh
core/icons/64/status/: Makefile
core/lib/: input.ex  keyboard_parser.ex  pocket_os.ex
core/src/: display.erl  input.erl  scene.erl
esp32/: Makefile  partitions.csv  sdkconfig
esp32/components/ihc-2020-badge/: component.mk  display_driver.c  display_driver.h  gbemu.c  sys.c
simulator/: display.c
